# museum

./: .gitignore  README.md  meson.build  teste.txt
.cache/clangd/index/: Object.cpp.6E0068AF0012F12B.idx  Player.cpp.1AC9F48FE5E7A8F0.idx  Player.hpp.C742643C0DCDA5AB.idx  State.cpp.60A78A3BE564846D.idx  State.hpp.6981A1B146B850A7.idx  Vector.hpp.CBDA549B7DF091A6.idx  Vector2.cpp.CC3A12AA07986DD1.idx  Vector2.hpp.22FD0DCE13C31835.idx  Vector3.cpp.028EF75EAC1B99E3.idx  Vector3.hpp.8DCF35214FF1F25F.idx  aux.cpp.A89B68B2098F3EF6.idx  aux.hpp.C3E9C13C59C67F17.idx  main.cpp.61EE256FF7758389.idx  main.cpp.EB7718EF94DFBCA9.idx  stb_image.hpp.716CD078B3BBE789.idx
assets/: script.py
include/game/: State.hpp
include/models/: Objects.hpp  Player.hpp  Scene.hpp
include/utils/: EulerAngle.hpp  Vector2.hpp  Vector3.hpp  aux.hpp
src/: config.hpp  main.cpp  meson.build
src/game/: State.cpp  meson.build
src/models/: Objects.cpp  Player.cpp  Scene.cpp  meson.build
src/utils/: Vector2.cpp  Vector3.cpp  aux.cpp  meson.build
